Navigate to root when click on organization name

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header block-light-blue">
-  <div class="content">
+  <div class="content" (click)="this.router.navigateByUrl('')">
     <div>
       <div class="logo-uz">учреждения здравоохранения</div>
       <div class="logo-name-container">
