--- a/src/app/core/layout/header/header.component.css
+++ b/src/app/core/layout/header/header.component.css
@@ -59,6 +59,10 @@
   align-items: center;
 }
 
+.content:hover{
+  cursor: pointer;
+}
+
 @media (max-width: 768px) {
   .header {
     flex-direction: column;
