--- a/src/app/core/auth/registration/registration.component.html
+++ b/src/app/core/auth/registration/registration.component.html
@@ -91,7 +91,7 @@
         <small class="red-color">{{ errorMessages['Address'] }}</small>
       }
     </div>
-    <small class="have-account-link"><a routerLink="">Уже есть аккаунт?</a></small>
+    <small class="have-account-link"><a routerLink="/login">Уже есть аккаунт?</a></small>
     <button (click)="submitForm()" class="registration-button" type="submit">Регистрация</button>
   </form>
 </div>
