--- a/src/app/features/appointments/pages/appointments-list/appointments-list.component.css
+++ b/src/app/features/appointments/pages/appointments-list/appointments-list.component.css
@@ -7,12 +7,11 @@
 
 .content {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
 }
 
 .appointment-info {
-  width: 250px;
   border: 1px solid #ddd;
   margin: 10px;
   padding: 15px;
