--- a/src/app/features/news/news/news.component.css
+++ b/src/app/features/news/news/news.component.css
@@ -1,6 +1,6 @@
 .news-container {
   max-width: 800px;
-  margin: auto;
+  margin: 3vh auto;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
