--- a/src/app/features/patient/pages/patient-update/patient-update.component.html
+++ b/src/app/features/patient/pages/patient-update/patient-update.component.html
@@ -7,7 +7,7 @@
         <input formControlName="email" id="email" type="text">
       </div>
       @if (!patientUpdateForm.controls.email.valid && patientUpdateForm.controls.email.touched) {
-        <small style="color: red;">Поля обязательно для заполнения</small>
+        <small style="color: red;">Поле обязательно для заполнения</small>
       }
       @if (errorMessages['Email']) {
         <small class="red-color">{{ errorMessages['Email'] }}</small>
@@ -23,27 +23,27 @@
       }
     </div>
     <div>
-      <label for="name"><span class="red-color">*</span>Имя:</label>
-      <div>
-        <input formControlName="name" id="name" type="text">
-      </div>
-      @if (!patientUpdateForm.controls.name.valid && patientUpdateForm.controls.name.touched) {
-        <small style="color: red;">Поля обязательно для заполнения</small>
-      }
-      @if (errorMessages['Name']) {
-        <small class="red-color">{{ errorMessages['Name'] }}</small>
-      }
-    </div>
-    <div>
       <label for="surname"><span class="red-color">*</span>Фамилия:</label>
       <div>
         <input formControlName="surname" id="surname" type="text">
       </div>
       @if (!patientUpdateForm.controls.surname.valid && patientUpdateForm.controls.surname.touched) {
-        <small style="color: red;">Поля обязательно для заполнения</small>
+        <small style="color: red;">Поле обязательно для заполнения</small>
       }
       @if (errorMessages['Surname']) {
         <small class="red-color">{{ errorMessages['Surname'] }} </small>
+      }
+    </div>
+    <div>
+      <label for="name"><span class="red-color">*</span>Имя:</label>
+      <div>
+        <input formControlName="name" id="name" type="text">
+      </div>
+      @if (!patientUpdateForm.controls.name.valid && patientUpdateForm.controls.name.touched) {
+        <small style="color: red;">Поле обязательно для заполнения</small>
+      }
+      @if (errorMessages['Name']) {
+        <small class="red-color">{{ errorMessages['Name'] }}</small>
       }
     </div>
     <div>
@@ -58,7 +58,7 @@
         <input [max]="today" formControlName="birthDate" id="birthDate" type="date">
       </div>
       @if (!patientUpdateForm.controls.birthDate.valid && patientUpdateForm.controls.birthDate.touched) {
-        <small style="color: red;">Поля обязательно для заполнения</small>
+        <small style="color: red;">Поле обязательно для заполнения</small>
       }
       @if (errorMessages['BirthDate']) {
         <small class="red-color">{{ errorMessages['BirthDate'] }}</small>
@@ -70,7 +70,7 @@
         <input formControlName="phoneNumber" id="phoneNumber" mask="(00)000-00-00" prefix="+375" type='text'>
       </div>
       @if (!patientUpdateForm.controls.phoneNumber.valid && patientUpdateForm.controls.phoneNumber.touched) {
-        <small style="color: red;">Поля обязательно для заполнения</small>
+        <small style="color: red;">Поле обязательно для заполнения</small>
       }
       @if (errorMessages['PhoneNumber']) {
         <small class="red-color">{{ errorMessages['PhoneNumber'] }}</small>
@@ -82,12 +82,12 @@
         <input formControlName="address" id="address" type="text">
       </div>
       @if (!patientUpdateForm.controls.address.valid && patientUpdateForm.controls.address.touched) {
-        <small style="color: red;">Поля обязательно для заполнения</small>
+        <small style="color: red;">Поле обязательно для заполнения</small>
       }
       @if (errorMessages['Address']) {
         <small class="red-color">{{ errorMessages['Address'] }}</small>
       }
     </div>
-    <button (click)="update()" class="registration-button" type="submit">Обновить</button>
+    <button (click)="update()" class="registration-button" type="submit">Изменить</button>
   </form>
 </div>
