--- a/src/app/features/admin-panel/pages/working-schedule/working-schedule-update/working-schedule-update.component.html
+++ b/src/app/features/admin-panel/pages/working-schedule/working-schedule-update/working-schedule-update.component.html
@@ -1,13 +1,23 @@
 <div class="container mt-5">
-  <h2 class="mb-3">Обновление рабочего расписания</h2>
+  <h2 class="mb-3">Изменение рабочего расписания</h2>
   <form [formGroup]="workingScheduleForm" (ngSubmit)="update()">
     <div class="form-group">
       <label for="start">Начало</label>
       <input type="text" id="start" mask="00:00" class="form-control" formControlName="start">
     </div>
+    @if(!workingScheduleForm.controls.start.valid && workingScheduleForm.controls.start.touched){
+      <div>
+        <small style="color: red">Поле обязательно для заполнения</small>
+      </div>
+    }
     <div class="form-group">
       <label for="end">Конец</label>
       <input type="text" id="end" mask="00:00" class="form-control" formControlName="end">
+      @if(!workingScheduleForm.controls.end.valid && workingScheduleForm.controls.end.touched){
+        <div>
+          <small style="color: red">Поле обязательно для заполнения</small>
+        </div>
+      }
     </div>
 
     <div class="form-group">
@@ -21,6 +31,11 @@
         <option value="суббота">Суббота</option>
         <option value="воскресенье">Воскресенье</option>
       </select>
+      @if(!workingScheduleForm.controls.workingDay.valid && workingScheduleForm.controls.workingDay.touched){
+        <div>
+          <small style="color: red">Поле обязательно для заполнения</small>
+        </div>
+      }
     </div>
 
     @if(this.errorMessages['WorkingDayMoreThan12Hours']){
@@ -29,6 +44,6 @@
       </div>
     }
 
-    <button type="submit" class="btn btn-primary" [disabled]="!workingScheduleForm.valid">Обновить</button>
+    <button type="submit" class="btn btn-primary" [disabled]="!workingScheduleForm.valid">Изменить</button>
   </form>
 </div>
