--- a/src/app/features/admin-panel/pages/specializations/specializations-list/specializations-list.component.html
+++ b/src/app/features/admin-panel/pages/specializations/specializations-list/specializations-list.component.html
@@ -14,7 +14,7 @@
         <tr>
           <td>{{specialization.name}}</td>
           <td>
-            <button class="update-button" (click)="update(specialization.id)">Обновить</button>
+            <button class="update-button" (click)="update(specialization.id)">Изменить</button>
             <button class="delete-button" (click)="delete(specialization.id)">Удалить</button>
           </td>
         </tr>
