--- a/src/app/features/admin-panel/pages/dentists/create-dentist/create-dentist.component.html
+++ b/src/app/features/admin-panel/pages/dentists/create-dentist/create-dentist.component.html
@@ -1,15 +1,7 @@
 <div class="create-form-container">
+  <h3>Добавление врача</h3>
   <form class="create-form" [formGroup]="dentistCreateForm">
     <div class="nsp">
-      <div class="name">
-        <label for="name"><span class="red-color">*</span>Имя:</label>
-        <div>
-          <input type="text" id="name" formControlName="name">
-        </div>
-        @if(!dentistCreateForm.controls.name.valid && dentistCreateForm.controls.name.touched){
-          <small style="color: red;">Поля обязательно для заполнения</small>
-        }
-      </div>
       <div class="surname">
         <div>
           <label for="surname"><span class="red-color">*</span>Фамилия:</label>
@@ -17,9 +9,18 @@
             <input type="text" id="surname" formControlName="surname">
           </div>
           @if(!dentistCreateForm.controls.surname.valid && dentistCreateForm.controls.surname.touched){
-            <small style="color: red;">Поля обязательно для заполнения</small>
+            <small style="color: red;">Поле обязательно для заполнения</small>
           }
         </div>
+      </div>
+      <div class="name">
+        <label for="name"><span class="red-color">*</span>Имя:</label>
+        <div>
+          <input type="text" id="name" formControlName="name">
+        </div>
+        @if(!dentistCreateForm.controls.name.valid && dentistCreateForm.controls.name.touched){
+          <small style="color: red;">Поле обязательно для заполнения</small>
+        }
       </div>
       <div>
         <label for="patronymic">Отчество:</label>
@@ -37,6 +38,11 @@
             <option [value]="specialization.name">{{specialization.name}}</option>
           }
         </select>
+          @if(!dentistCreateForm.controls.specialization.valid && dentistCreateForm.controls.cabinetNumber.touched){
+            <div>
+              <small style="color: red;">Выберите специализацию</small>
+            </div>
+          }
       </div>
       <div>
         <label for="cabinetNumber">Номер кабинета: </label>
@@ -57,7 +63,7 @@
           <input type="text" id="email" formControlName="email">
         </div>
         @if(!dentistCreateForm.controls.email.valid && dentistCreateForm.controls.email.touched){
-          <small style="color: red;">Поля обязательно для заполнения</small>
+          <small style="color: red;">Поле обязательно для заполнения</small>
         }
         @if (errorMessages['EmailExists']) {
           <small class="red-color">{{ errorMessages['EmailExists'] }}</small>
@@ -69,7 +75,7 @@
           <input type="password" id="password" formControlName="password">
         </div>
         @if(!dentistCreateForm.controls.password.valid && dentistCreateForm.controls.password.touched){
-          <small style="color: red;">Поля обязательно для заполнения</small>
+          <small style="color: red;">Минимальная длина пароля 8 символов</small>
         }
       </div>
     </div>
@@ -79,7 +85,7 @@
         <input type="date" id="birthDate" formControlName="birthDate">
       </div>
       @if(!dentistCreateForm.controls.birthDate.valid && dentistCreateForm.controls.birthDate.touched){
-        <small style="color: red;">Поля обязательно для заполнения</small>
+        <small style="color: red;">Поле обязательно для заполнения</small>
       }
       @if(errorMessages['BirthDate']){
         <small class="red-color">{{ errorMessages['BirthDate'] }}</small>
@@ -92,7 +98,7 @@
           <input formControlName="phoneNumber" id="phoneNumber" mask="(00)000-00-00" prefix="+375" type='text'>
         </div>
         @if(!dentistCreateForm.controls.phoneNumber.valid && dentistCreateForm.controls.phoneNumber.touched){
-          <small style="color: red;">Поля обязательно для заполнения</small>
+          <small style="color: red;">Поле обязательно для заполнения</small>
         }
       </div>
       <div>
@@ -101,7 +107,7 @@
           <input formControlName="address" id="address" type="text">
         </div>
         @if (!dentistCreateForm.controls.address.valid && dentistCreateForm.controls.address.touched) {
-          <small style="color: red;">Поля обязательно для заполнения</small>
+          <small style="color: red;">Поле обязательно для заполнения</small>
         }
       </div>
     </div>
